--- a/src/scss/components/theme.scss
+++ b/src/scss/components/theme.scss
@@ -1,5 +1,7 @@
 .theme {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   bottom: 210px;
   right: 34px;
   width: 40px;
@@ -9,9 +11,8 @@
   border-radius: 50%;
 
   &__icon {
-    width: 32px;
-    height: 32px;
-    transform: translateX(2px);
+    width: 26px;
+    height: 26px;
     fill: #000;
   }
 
